PLF-3465 :Migrate from BOS 5.6.3 SP to BOS 5.7.2 Community.

--- a/bonita/component/filter/pom.xml
+++ b/bonita/component/filter/pom.xml
@@ -19,7 +19,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.bonitasoft.console</groupId>
-			<artifactId>security-server-ext</artifactId>
+			<artifactId>security-server</artifactId>
 			<version>${bonitasoft.version}</version>
 			<scope>provided</scope>
 		</dependency>
