--- a/packaging/bonita/src/main/resources/bonita/server/default/conf/bonita-journal.properties
+++ b/packaging/bonita/src/main/resources/bonita/server/default/conf/bonita-journal.properties
@@ -11,7 +11,7 @@
 ##################################
 # IMPORTANT: do not use those settings for production!
 # By default Bonita use a H2 database that will store all data in one file.
-# Access to the database is done throught a datasource configured in Tomcat configuration file: conf/context.xml
+# Access to the database is done through a datasource configured in Tomcat configuration file: conf/context.xml
 
 # H2 Hibernate dialect
 hibernate.dialect                        org.hibernate.dialect.H2Dialect
@@ -38,9 +38,11 @@ hibernate.connection.datasource          java:/comp/env/bonita/default/journal
 ##
 hibernate.cache.use_second_level_cache   false
 hibernate.cache.use_query_cache          false
+#hibernate.cache.region.factory_class     net.sf.ehcache.hibernate.EhCacheRegionFactory
+#net.sf.ehcache.configurationResourceName ehcache-journal.xml
 
 ##
-# Shutdwon connection after query
+# Shutdown connection after query
 ##
 hibernate.connection.shutdown            true
 
@@ -69,9 +71,9 @@ hibernate.jdbc.use_scrollable_resultset  true
 # In the production environment, you might use DATASOURCE capabilities provided by the web container, instead of provided properties.
 #
 # IMPORTANT:
-# - When you use another configuration make sur you add the database driver file (jar file) to Tomcat lib folder.
+# - When you use another configuration make sure you add the database driver file (jar file) to Tomcat lib folder.
 # - Also use the "hibernate.hbm2ddl.auto update" only at the first run to create all tables in your database.
-# - Also remember to set database username and password.
+# - Also remember to set database user name and password.
 
 
 ##
