--- a/packaging/bonita/src/main/resources/bonita/client/tenants/default/web/common/conf/bonita-web-preferences.properties
+++ b/packaging/bonita/src/main/resources/bonita/client/tenants/default/web/common/conf/bonita-web-preferences.properties
@@ -3,3 +3,5 @@ userXP.caseList.stretchedColumn=10
 userXP.admin.reports=admin (default)
 currentTheme=default
 userXP.processList.processesDisplayed=5
+attachment.max.size=15
+
