--- a/packaging/bonita/src/main/resources/bonita/client/tenants/default/web/forms/conf/forms-config.properties
+++ b/packaging/bonita/src/main/resources/bonita/client/tenants/default/web/forms/conf/forms-config.properties
@@ -8,4 +8,6 @@ forms.default.date.format               MMMM dd, yyyy
 forms.cache.processes.size				15
 forms.cache.process.ttl					300000
 forms.cache.languages.size				5
-form.service.provider					org.bonitasoft.forms.server.provider.impl.FormServiceProviderExtImpl
+form.service.provider					org.bonitasoft.forms.server.provider.impl.FormServiceProviderImpl
+#This value represents MB, e.g 15 means 15MB.
+form.attachment.max.size                15
