PLF-3486 :Create New Branch for Bonita 5.6.3 SP

--- a/bonita/component/uiextension/pom.xml
+++ b/bonita/component/uiextension/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.exoplatform.platform</groupId>
 		<artifactId>exo.platform.bonita.component</artifactId>
-		<version>2.0.2.x-snapshot</version>
+		<version>3.5.3</version>
 	</parent>
 	<artifactId>exo.platform.bonita.component.uiextension</artifactId>
 	<packaging>jar</packaging>
