--- a/packaging/bonita/pom.xml
+++ b/packaging/bonita/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.exoplatform.platform</groupId>
 		<artifactId>exo.platform.packaging</artifactId>
-		<version>2.0.2.x-snapshot</version>
+		<version>3.5.3</version>
 	</parent>
 	<artifactId>exo.platform.packaging.bonita</artifactId>
 	<packaging>pom</packaging>
@@ -108,7 +108,7 @@
 											<groupId>org.exoplatform.platform</groupId>
 											<artifactId>exo.platform.packaging.tomcat</artifactId>
 											<type>zip</type>
-											<version>3.5.3</version>
+											<version>${exo.platform.packaging.tomcat.version}</version>
 											<outputDirectory>${project.build.directory}</outputDirectory>
 											<excludes>conf/</excludes>
 										</artifactItem>
