--- a/bonita/portlet/pom.xml
+++ b/bonita/portlet/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<artifactId>exo.platform.bonita.portlet</artifactId>
 	<packaging>war</packaging>
-	<name>Platform for Bonita - Extension Webapp</name>
+	<name>Platform for Bonita - Bonita Portlet</name>
 	<dependencies>
 		<dependency>
 			<groupId>org.exoplatform.portal</groupId>
