--- a/bonita/doc/installguide/pom.xml
+++ b/bonita/doc/installguide/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.exoplatform.platform</groupId>
 		<artifactId>exo.bonita.doc</artifactId>
-		<version>2.0.2.x-snapshot</version>
+		<version>3.5.5-SNAPSHOT</version>
 	</parent>
 	<artifactId>exo.bonita.doc.installguide</artifactId>
 	<packaging>pom</packaging>
