--- a/bonita/portlet/pom.xml
+++ b/bonita/portlet/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.exoplatform.platform</groupId>
 		<artifactId>exo.platform.bonita</artifactId>
-		<version>2.0.2.x-snapshot</version>
+		<version>3.5.5-SNAPSHOT</version>
 	</parent>
 	<artifactId>exo.platform.bonita.portlet</artifactId>
 	<packaging>war</packaging>
