--- a/bonita/samples/pom.xml
+++ b/bonita/samples/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>org.exoplatform.platform</groupId>
 		<artifactId>exo.platform.bonita</artifactId>
-		<version>2.0.2.x-snapshot</version>
+		<version>3.5.5-SNAPSHOT</version>
 	</parent>
 	<artifactId>exo.platform.bonita.samples</artifactId>
 	<packaging>pom</packaging>
